fix z-index for modal

--- a/src/styles/components/Modal.module.scss
+++ b/src/styles/components/Modal.module.scss
@@ -3,6 +3,7 @@ body.active-modal {
 }
 
 .modal, .overlay {
+    z-index: 99999;
     width: 100vw;
     height: 100vh;
     top: 0;
